manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
spec:
  selector:
    app: aggregator
  ports:
    - port: 8080
      targetPort: 8080
