manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregator
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /aggregator
        pathType: Exact
        backend:
          service:
            name: aggregator
            port:
              number: 8080
